# splice-pool

./: CMakeLists.txt  README.md  splice-pool.hpp
test/: CMakeLists.txt  auto-release.cpp  object-pool.cpp  stack.cpp
